--- a/projects.html
+++ b/projects.html
@@ -19,17 +19,17 @@
     <h2>My Projects</h2>
 
     <div class="card">
-      <h3>Simulation Project</h3>
+      <h3><a href="projects/simulation.html">Simulation Project</a></h3>
       <p>Exploring strategies in a two-player mathematical game using Python.</p>
     </div>
 
     <div class="card">
-      <h3>Engineering Models</h3>
+      <h3><a href="projects/engineering-models.html">Engineering Models</a></h3>
       <p>SolidWorks designs: stress analysis and flattening continuous bends.</p>
     </div>
 
     <div class="card">
-      <h3>Data Analysis</h3>
+      <h3><a href="projects/data-analysis.html">Data Analysis</a></h3>
       <p>Collecting and analyzing IPL match statistics, exporting player breakdowns to Excel.</p>
     </div>
   </main>
