--- a/projects/simulation.html
+++ b/projects/simulation.html
@@ -12,6 +12,7 @@
       <a href="../index.html">Home</a>
       <a href="../projects.html">Projects</a>
       <a href="../cv.html">CV</a>
+      <a href="https://www.linkedin.com/in/harik-sodhi-961b73347/">LinkedIn</a>
     </nav>
   </header>
 
