--- a/advice.html
+++ b/advice.html
@@ -2,29 +2,28 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8">
-  <title>Projects</title>
+  <title>Advice</title>
   <link rel="stylesheet" href="style.css">
 </head>
 <body>
   <header>
-    <h1>Projects</h1>
+    <h1>Advice</h1>
     <nav>
       <a href="index.html">Home</a>
       <a href="projects.html">Projects</a>
       <a href="assets/cv.pdf">CV</a>
+      <a href="assets/notes.html">Notes</a>
+      <a href="assets/advice.html">Advice</a>
       <a href="https://www.linkedin.com/in/harik-sodhi-961b73347/">LinkedIn</a>
     </nav>
   </header>
 
   <main>
-    <h2>My Projects</h2>
-
-    <a href="projects/simulation.html" class="card-link">
-    <div class="card">
-      <h3>Simulation Project</h3>
-      <p>Exploring strategies in a two-player mathematical game using Python.</p>
-    </div>
-    </a>
+    <section>
+      <p>Hello! I’m Harik. I'm interested in physics, engineering, and problem solving.  
+         This site is where I share my projects, notes, advice, and CV.</p>
+    </section>
+  </main>
 
   <footer>
     <p>Email me at <a href="mailto:sodhiharik@gmail.com">sodhiharik@gmail.com</a> for any questions!</p>
