--- a/index.html
+++ b/index.html
@@ -2,16 +2,18 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8">
-  <title>My Website</title>
+  <title>Harik Sodhi</title>
   <link rel="stylesheet" href="style.css">
 </head>
 <body>
   <header>
-    <h1>My Website</h1>
+    <h1>Harik Sodhi</h1>
     <nav>
       <a href="index.html">Home</a>
       <a href="projects.html">Projects</a>
-      <a href="cv.html">CV</a>
+      <a href="assets/cv.pdf">CV</a>
+      <a href="assets/notes.html">Notes</a>
+      <a href="assets/advice.html">Advice</a>
       <a href="https://www.linkedin.com/in/harik-sodhi-961b73347/">LinkedIn</a>
     </nav>
   </header>
@@ -19,13 +21,13 @@
   <main>
     <section>
       <h2>Welcome</h2>
-      <p>Hello! I’m [Your Name], interested in physics, engineering, and problem solving.  
-         This site is where I share my projects, notes, and CV.</p>
+      <p>Hello! I’m Harik. I'm interested in physics, engineering, and problem solving.  
+         This site is where I share my projects, notes, advice, and CV.</p>
     </section>
   </main>
 
   <footer>
-    <p>&copy; 2025 My Website</p>
+    <p>Email me at <a href="mailto:sodhiharik@gmail.com">sodhiharik@gmail.com</a> for any questions!</p>
   </footer>
 </body>
 </html>
