fixed some stuff

--- a/advice.html
+++ b/advice.html
@@ -11,9 +11,9 @@
     <nav>
       <a href="index.html">Home</a>
       <a href="projects.html">Projects</a>
+      <a href="notes.html">Notes</a>
+      <a href="advice.html">Advice</a>
       <a href="assets/cv.pdf">CV</a>
-      <a href="assets/notes.html">Notes</a>
-      <a href="assets/advice.html">Advice</a>
       <a href="https://www.linkedin.com/in/harik-sodhi-961b73347/">LinkedIn</a>
     </nav>
   </header>
