--- a/notes.html
+++ b/notes.html
@@ -2,12 +2,12 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8">
-  <title>Harik Sodhi</title>
+  <title>Notes</title>
   <link rel="stylesheet" href="style.css">
 </head>
 <body>
   <header>
-    <h1>Harik Sodhi</h1>
+    <h1>Notes</h1>
     <nav>
       <a href="index.html">Home</a>
       <a href="projects.html">Projects</a>
@@ -20,9 +20,7 @@
 
   <main>
     <section>
-      <h2>Welcome</h2>
-      <p>Hello! I’m Harik. I'm interested in physics, engineering, and problem solving.  
-         This site is where I share my projects, notes, advice, CV, and possibly more in the future!</p>
+      This is where I will put my notes from various classes and self-study.
     </section>
   </main>
 
