--- a/projects.html
+++ b/projects.html
@@ -11,6 +11,8 @@
     <nav>
       <a href="index.html">Home</a>
       <a href="projects.html">Projects</a>
+      <a href="notes.html">Notes</a>
+      <a href="advice.html">Advice</a>
       <a href="assets/cv.pdf">CV</a>
       <a href="https://www.linkedin.com/in/harik-sodhi-961b73347/">LinkedIn</a>
     </nav>
