working on projects

--- a/advice.html
+++ b/advice.html
@@ -20,8 +20,7 @@
 
   <main>
     <section>
-      <p>Hello! I’m Harik. I'm interested in physics, engineering, and problem solving.  
-         This site is where I share my projects, notes, advice, and CV.</p>
+      <p>I have done a lot of projects in the past and I really benefitted from the advice of others so I want to share some tips that helped me.</p>
     </section>
   </main>
 
