--- a/projects.html
+++ b/projects.html
@@ -20,14 +20,37 @@
 
   <main>
     <h2>My Projects</h2>
-
-    <a href="projects/simulation.html" class="card-link">
+    <a href="projects/robotics.html" class="card-link">
     <div class="card">
-      <h3>Simulation Project</h3>
-      <p>Exploring strategies in a two-player mathematical game using Python.</p>
+      <h3>VEX Robotics</h3>
+      <p>Over the course of 3 years, I was involved in VEX Robotics, designing and programming robots for competition.</p>
     </div>
     </a>
-
+    <a href="projects/EPQ.html" class="card-link">
+    <div class="card">
+      <h3>EPQ</h3>
+      <p>For my Extended Project Qualification, I researched and created a project on sustainable aircraft design.</p>
+    </div>
+    </a>
+    <a href="projects/iplstats.html" class="card-link">
+    <div class="card">
+      <h3>IPL Stats</h3>
+      <p>In this project, I looked at data during the 2024 and 2025 IPL seasons using Python and scraping tools.</p>
+    </div>
+    </a>
+    <a href="projects/aoc.html" class="card-link">
+    <div class="card">
+      <h3>Advent of Code</h3>
+      <p>Details about my participation in Advent of Code.</p>
+    </div>
+    </a>
+    <a href="projects/iplstats.html" class="card-link">
+    <div class="card">
+      <h3>IPL Stats</h3>
+      <p>In this project, I looked at data during the 2024 and 2025 IPL seasons using Python and scraping tools.</p>
+    </div>
+    </a>
+    
   <footer>
     <p>Email me at <a href="mailto:sodhiharik@gmail.com">sodhiharik@gmail.com</a> for any questions!</p>
   </footer>
