--- a/advice.html
+++ b/advice.html
@@ -22,7 +22,10 @@
     <section>
       <p>I have done a lot of projects in the past and I really benefitted from the advice of others so I want to share some tips that helped me.</p>
     </section>
-  </main>
+    <section>
+      <h2>Physics Olympiads and Applying to the UK for University</h2>
+      This advice document was originally posted on PhODS (Physics Olympiad Discord Server) as a Google Doc. You can download a copy at <a href="assets/advice1.pdf">here</a>. The section on applying to university in the UK is mainly aimed at international students who don't have much exposure to the UK system. However, some parts may be useful for UK students too.
+      </main>
 
   <footer>
     <p>Email me at <a href="mailto:sodhiharik@gmail.com">sodhiharik@gmail.com</a> for any questions!</p>
