--- a/projects/EPQ.html
+++ b/projects/EPQ.html
@@ -2,12 +2,12 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8">
-  <title>Harik Sodhi</title>
+  <title>EPQ</title>
   <link rel="stylesheet" href="../style.css">
 </head>
 <body>
   <header>
-    <h1>Harik Sodhi</h1>
+    <h1>EPQ</h1>
     <nav>
       <a href="../index.html">Home</a>
       <a href="../projects.html">Projects</a>
@@ -20,9 +20,12 @@
 
   <main>
     <section>
-      <h2>Welcome</h2>
-      <p>Hello! I’m Harik. I'm interested in physics, engineering, and problem solving.  
-         This site is where I share my projects, notes, advice, CV, and possibly more in the future!</p>
+      <p>This project was about sustainable aircraft design and was in 2 parts. The first involved researching various things, with full analysis and evaluation
+        of sources. The second part was a design project, where I modified wing design and tried to optimise for sustainability. I used SolidWorks CFD. However, in the
+        conclusions, I discussed improvements including Bayesian Optimisation and Ansys + SolidWorks API. The method used was grid search and this resulted in very slow
+        runs, because varying 5 or so different parameters across 20 different values gives a very large number of combinations. This could be used alongside other tools to 
+        optimise even better. The full report can be found <a href="https://www.dropbox.com/scl/fi/rus0hzmajxiiygh6gviq2/EPQ-latest.docx?rlkey=3p2r6k97mbjsp2e2g5nfl2u68&st=1uxl63ix&dl=0">here</a>.
+      </p>
     </section>
   </main>
 
