--- a/projects/robotics.html
+++ b/projects/robotics.html
@@ -24,10 +24,52 @@
     </section>
     <section>
       <h2>2021-2022</h2>
-      <img src="assets/vortex.jpg" alt="20785B Vortex Invicta Robot" style="width:300px;height:auto;">
+      <img src="../assets/vortex.png" alt="20785B Vortex Invicta Robot" style="width:200px;height:auto;">
+      <img src="../assets/vortex2.png" alt="20785B Vortex Invicta Robot" style="width:550px;height:auto;">
       <p>I was team captain of 20785B Vortex Invicta. We competed in various VEX Robotics competitions and achieved significant success, including qualifying for the VEX Robotics World Championship. I was also head programmer
-      for our team, leading the development of our robot's autonomous and driver-controlled functionalities using VEXcode Pro (C++). This year, we won the <strong>Judges' Award</strong> at the VEX Robotics National Championship.</p>
+      for our team, leading the development of our robot's autonomous and driver-controlled functionalities using VEXcode Pro (C++). This year, we won the <strong>Judges' Award</strong> at the VEX Robotics National Championship. The whole team were new to robotics and we had to learn everything from scratch, so this award was a testament to our hard work and dedication.</p>
     </section>
+    <section>
+      <h2>2022-2023</h2>
+      <p>In this season, I didn't compete but I mentored 20785C, a middle school team. None of them had any prior robotics experience which meant I had to teach them the basics of robotics and programming. It was a rewarding experience to see them grow and develop their skills throughout the season, especially in such a difficult season design and programming-wise.</p>
+    </section>
+    <section>
+      <h2>2023-2024</h2>
+      <img src="../assets/override.png" alt="20785B Vortex Invicta Robot" style="width:425px;height:auto;">
+      <img src="../assets/override2.png" alt="20785B Vortex Invicta Robot" style="width:325px;height:auto;">
+      <p>In this season, I competed as team captain of 20785C Override, also working on programming (PROS C++ as well as Web design with HTML/CSS/JavaScript) and design. We again qualified to the VEX Robotics World Championships but didn't attend due to exams. Instead, we went to Mecha Mayhem, a signature event, in Calgary. The highlight of the season was ranking first in our division at the UK National Championships.</p>
+    </section>
+    <section>
+      <h2>2024-2025</h2>
+      <p>This season, I tried to do an independent team, which involved doing all the work myself, from design to programming to building to strategy. It was stopped short because of personal reasons but it was still an immense learning experience.</p>
+    </section>
+    <section>
+      <h2>Student Advisory Board</h2>
+      <p>I was selected to be a member of the VEX Robotics Student Advisory Board for the 2023-2024 season. This involved providing feedback to VEX Robotics on various aspects of the program, including the competition structure, rules, and resources. It was a great opportunity to contribute to the VEX Robotics community and help improve the experience for other students. I was selected due to helping people around the world with programming and design via VEXForum.</p>
+    </section>
+    <section>
+      <h2>Volunteering</h2>
+      <p>I have volunteered at various VEX Robotics events, mainly 3 competitions hosted at my school, across V5RC and VEX IQ. I have judged and refereed and I am looking forward to volunteering more at different competitions going into the future.</p>
+    </section>
+    <section>
+      <h2>Skills Developed</h2>
+      <ul>
+        <li>Leadership: As team captain, I developed strong leadership skills, learning how to motivate and manage a team effectively. This was especially true because of high turnover meaning every season there were people new to robotics who weren't as enthusiastic and put off by the high skill requirement.</li>
+        <li>Programming: I gained proficiency in C++ programming using VEXcode Pro and PROS, developing both autonomous and driver-controlled functionalities for our robots. I also helped with web design using HTML, CSS, and JavaScript.</li>
+        <li>Problem-Solving: Robotics competitions often present unexpected setbacks, as well as requirement for original thinking - like using zip ties to touch the elevation bar in Over Under.</li>
+        <li>Collaboration: Working closely with my teammates taught me the importance of effective communication and teamwork in achieving common goals, as well as the importance of sticking to deadlines.</li>
+        <li>Technical Skills: I learned about mechanical design, electronics, and sensor integration, enhancing my understanding of robotics systems. I also worked a lot with CAD such as SolidWorks, being certified as a SolidWorks Expert by the end.</li>
+      </ul>
+      <p>Overall, my experience in VEX Robotics has been incredibly rewarding, providing me with valuable skills and experiences that will benefit me in future endeavors.</p>
+    </section>
+    <section>
+      <h2>Links</h2>
+      <ul>
+        <li><a href="https://www.vexrobotics.com/">VEX Robotics Official Website</a></li>
+        <li><a href="https://www.robotevents.com/">Robot Events - Find Competitions</a></li>
+        <li><a href="https://www.vexforum.com/">VEX Forum - Community Discussions (I personally was very active here)</a></li>
+        <li><a href="https://docs.google.com/document/d/137Em5uDeywvRrIxUklqKHSx7tETYG-DzhGEWD0dj6MY/edit?usp=sharing">Template for emailing sponsors used in 2023-2024</a></li>
+        <li><a href="https://typst.app/project/r-Xh9SzYdkza8tjUYhG81h">Design notebook (first couple of months before cancellation) for 2024-2025 on Typst (Use 0.11.0 to compile)</a></li>
   </main>
 
   <footer>
