--- a/projects/iplstats.html
+++ b/projects/iplstats.html
@@ -2,12 +2,12 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8">
-  <title>Harik Sodhi</title>
+  <title>IPL Stats</title>
   <link rel="stylesheet" href="../style.css">
 </head>
 <body>
   <header>
-    <h1>Harik Sodhi</h1>
+    <h1>IPL Stats</h1>
     <nav>
       <a href="../index.html">Home</a>
       <a href="../projects.html">Projects</a>
@@ -20,9 +20,13 @@
 
   <main>
     <section>
-      <h2>Welcome</h2>
-      <p>Hello! I’m Harik. I'm interested in physics, engineering, and problem solving.  
-         This site is where I share my projects, notes, advice, CV, and possibly more in the future!</p>
+      <img src="../assets/ipl.png" alt="IPL Stats" style="width: 750px;height:auto;">
+      <p>
+        In this project, I made a Python project to score an IPL fantasy game. As you can see above, the scoring system is very complex, and there is no good API. 
+        This is mainly because of commercial reasons related to ESPNCricinfo. So, I had to scrape the data from the website. Partway through the project, ESPNCricinfo changed their 
+        security to prevent scraping, so I had to switch techniques. For more details on code, see the GitHub repo <a href="https://github.com/Harik-S/iplstats">here</a>. This was my 
+        first experience with web scraping and I learnt a lot about HTML, especially on the other side - extracting data rather than designing a website.
+      </p>
     </section>
   </main>
 
