tidied up advice

--- a/advice.html
+++ b/advice.html
@@ -23,10 +23,18 @@
       <p>I have done a lot of projects in the past and I really benefitted from the advice of others so I want to share some tips that helped me.</p>
     </section>
     <section>
-      <h2>Physics Olympiads and Applying to the UK for University</h2>
-      This advice document was originally posted on PhODS (Physics Olympiad Discord Server) as a Google Doc. You can download a copy at <a href="assets/advice1.pdf">here</a>. The section on applying to university in the UK is mainly aimed at international students who don't have much exposure to the UK system. However, some parts may be useful for UK students too.
-      </main>
-
+      <a href="advice/physics.html" class="card-link">
+    <div class="card">
+      <h3>Physics Olympiads</h3>
+      <p>I wrote up some advice for preparing for Physics Olympiads, specifically for IPhO, having competed myself. This was originally sent in PhODS (Physics Olympiad Discord Server). This page has a more polished version.</p>
+    </div>
+    </a>
+    <a href="advice/uni.html" class="card-link">
+    <div class="card">
+      <h3>Applying to University in the UK</h3>
+      <p>As part of that advice file, I included some advice for international students applying to universities in the UK, giving them some basic information and my experience. It also contains some advice I originally posted on The Student Room about ESAT and PAT (university entrance exams).</p>
+    </div>
+    </a>
   <footer>
     <p>Email me at <a href="mailto:sodhiharik@gmail.com">sodhiharik@gmail.com</a> for any questions!</p>
   </footer>
